fixed cards on the main page & add section on main page

--- a/src/index.html
+++ b/src/index.html
@@ -39,22 +39,22 @@
 				</div>
 				<img
 					src="images/decor/cube.svg"
-					alt="no-iamge"
+					alt="no-image"
 					class="preview__cube preview__cube--left"
 				/>
 				<img
 					src="images/decor/cube.svg"
-					alt="no-iamge"
+					alt="no-image"
 					class="preview__cube preview__cube--right"
 				/>
 				<img
 					src="images/decor/dots-white.svg"
-					alt="no-iamge"
+					alt="no-image"
 					class="preview__dots"
 				/>
 				<img
 					src="images/decor/dots-red.svg"
-					alt="no-iamge"
+					alt="no-image"
 					class="preview__dots preview__dots--left"
 				/>
 			</section>
@@ -79,7 +79,7 @@
 									<div class="swiper-slide">
 										<div class="popular-card">
 											<picture class="popular-card__image">
-												<img src="images/popular/slide_1.jpg" alt="no-iamge" />
+												<img src="images/popular/slide_1.jpg" alt="no-image" />
 											</picture>
 											<div class="popular-card__wrapper">
 												<h4 class="popular-card__title">
@@ -107,7 +107,7 @@
 									<div class="swiper-slide">
 										 <div class="popular-card">
 											 <picture class="popular-card__image">
-												 <img src="images/popular/slide_2.jpg" alt="no-iamge" />
+												 <img src="images/popular/slide_2.jpg" alt="no-image" />
 											 </picture>
 											 <div class="popular-card__wrapper">
 												 <h4 class="popular-card__title">
@@ -132,7 +132,7 @@
 									<div class="swiper-slide">
 										 <div class="popular-card">
 											 <picture class="popular-card__image">
-												 <img src="images/popular/slide_3.jpg" alt="no-iamge" />
+												 <img src="images/popular/slide_3.jpg" alt="no-image" />
 											 </picture>
 											 <div class="popular-card__wrapper">
 												 <h4 class="popular-card__title">
@@ -157,7 +157,7 @@
 									<div class="swiper-slide">
 										 <div class="popular-card">
 											 <picture class="popular-card__image">
-												 <img src="images/popular/slide_4.jpg" alt="no-iamge" />
+												 <img src="images/popular/slide_4.jpg" alt="no-image" />
 											 </picture>
 											 <div class="popular-card__wrapper">
 												 <h4 class="popular-card__title">
@@ -182,7 +182,7 @@
 									 <div class="swiper-slide">
 										 <div class="popular-card">
 											 <picture class="popular-card__image">
-												 <img src="images/popular/slide_1.jpg" alt="no-iamge" />
+												 <img src="images/popular/slide_1.jpg" alt="no-image" />
 											 </picture>
 											 <div class="popular-card__wrapper">
 												 <h4 class="popular-card__title">
@@ -210,7 +210,7 @@
 									 <div class="swiper-slide">
 										 <div class="popular-card">
 											 <picture class="popular-card__image">
-												 <img src="images/popular/slide_1.jpg" alt="no-iamge" />
+												 <img src="images/popular/slide_1.jpg" alt="no-image" />
 											 </picture>
 											 <div class="popular-card__wrapper">
 												 <h4 class="popular-card__title">
@@ -262,8 +262,8 @@
 									 <!-- Slides -->
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/slider/slide_1.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/slider/slide_1.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Консультация <br> по иммиграции или учебе</h4>
@@ -275,8 +275,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/slider/slide_2.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/slider/slide_2.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Федеральные программы иммиграции</h4>
@@ -288,8 +288,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/slider/slide_3.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/slider/slide_3.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Провинциальные программы иммиграции</h4>
@@ -301,8 +301,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/slider/slide_4.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/slider/slide_4.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Атлантический иммиграционный пилот</h4>
@@ -314,8 +314,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/slider/slide_1.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/slider/slide_1.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Консультация <br> по иммиграции или учебе</h4>
@@ -335,7 +335,7 @@
 						<div class="col">
 							<div class="details__header">
 								<a href="#" class="details__link">
-									 <span>Смотреть все</span>
+									 <span>С чего начать</span>
 									 <svg class="icon">
 											<use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
 									 </svg> 
@@ -436,8 +436,8 @@
 									 <!-- Slides -->
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Университеты и колледжи Канады</h4>
@@ -449,8 +449,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Поступление в канадские вузы</h4>
@@ -462,8 +462,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Языковые школы в Канаде</h4>
@@ -475,8 +475,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Стоимость обучения в Канаде</h4>
@@ -488,8 +488,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Консультация <br> по иммиграции или учебе</h4>
@@ -527,8 +527,8 @@
 									 <!-- Slides -->
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Профессии в Канаде</h4>
@@ -540,8 +540,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Поиск работы в Канаде</h4>
@@ -553,8 +553,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Временная работа для иностранцев</h4>
@@ -566,8 +566,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Global Talent Stream</h4>
@@ -579,8 +579,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Консультация <br> по иммиграции или учебе</h4>
@@ -618,8 +618,8 @@
 									 <!-- Slides -->
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Визы в Канаду самостотельно</h4>
@@ -631,8 +631,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Как продлить туристическую визу</h4>
@@ -644,8 +644,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Изменть туристическую визу на студенческую</h4>
@@ -657,8 +657,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Как продлить туристическую визу</h4>
@@ -670,8 +670,8 @@
 									 </div>
 									 <div class="swiper-slide slider__slide">
 										 <a href="#" class="slider-card">
-												<picture class="slider-card__iamage">
-													 <img src="images/bg-articles.jpg" alt="no-iamge">
+												<picture class="slider-card__image">
+													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
 												<div class="slider-card__info">
 													 <h4 class="slider-card__subtitle">Изменть туристическую визу на студенческую</h4>
@@ -689,6 +689,110 @@
 				 	</div>
 				</div>
 			</section>
+
+         <section class="main__slider slider">
+				<div class="container">
+					<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 details">
+						<div class="col">
+							<div class="details__header">
+								<a href="#" class="details__link">
+									 <span>Общее</span>
+									 <svg class="icon">
+											<use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
+									 </svg> 
+								</a>
+						 	</div>
+							<div class="details-card">
+								<picture class="details-card__preview">
+									<img src="images/image-section_1.jpg" alt="no-image">
+									<div class="details-card__info">
+										<span>Лучшие маленькие города <br> Канады</span>
+									</div>
+								</picture>
+								<ul class="details-card__list">
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Лучшие маленькие города Канады</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Сделайте эти 6 шагов перед переездо <br> в Канаду!</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Канадский город - второй по безопасности в мире</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Минус Канады: дискриминация по языку</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col">
+							<div class="details__header">
+								<a href="#" class="details__link">
+									 <span>Истории успеха</span>
+									 <svg class="icon">
+											<use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
+									 </svg> 
+								</a>
+						 	</div>
+							<div class="details-card">
+								<picture class="details-card__preview">
+									<img src="images/image-section_2.jpg" alt="no-image">
+									<div class="details-card__info">
+										<span>У Канады золотая медаль на олимпиаде в Токио!</span>
+									</div>
+								</picture>
+								<ul class="details-card__list">
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Где лучше жить в Канаде: путешествия по всем провинциям</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Работа мясником в Канаде. Самое позитивное интерью.</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Жизнь в Нью-Брансуике: поиск работы, цены, зарплаты,климат,диаспоры</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">8 лет жизни в Манитобе</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+                  <div class="col">
+							<div class="details__header">
+								<a href="#" class="details__link">
+									 <span>Это надо знать</span>
+									 <svg class="icon">
+											<use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
+									 </svg> 
+								</a>
+						 	</div>
+							<div class="details-card">
+								<picture class="details-card__preview">
+									<img src="images/image-section_3.jpg" alt="no-image">
+									<div class="details-card__info">
+										<span>Минимальная зарплата в Канаде <br> в 2021 году</span>
+									</div>
+								</picture>
+								<ul class="details-card__list">
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Открыта регистрации на крупнейшую ярмарку вакансий в Канаде</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Акции от канадских колледжей: стипендия $10 000 и бесплатный английский</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Новая система классификации проффесий в Канаде</a>
+									</li>
+									<li class="details-card__item">
+										<a href="#" class="details-card__link">Вакцинация в Канаде: правила <br> и ограничения</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 
          <section class="main__project project">
             <div class="container">
