fixed lock body

--- a/src/page article details.html
+++ b/src/page article details.html
@@ -211,6 +211,16 @@
             <button class="header-bottom__chance btn-chance" type="button">
               Оценить шансы
             </button>
+            <div class="header-bottom__user-mobile user-mobile">
+              <ul class="user-mobile__list">
+                <li class="user-mobile__item">Профиль</li>
+                <li class="user-mobile__item">Курсы</li>
+                <li class="user-mobile__item">Монеты</li>
+                <li class="user-mobile__item">Уведомления</li>
+                <li class="user-mobile__item">Настройки</li>
+                <li class="user-mobile__item user-mobile__item--bold">Выход</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
