page category-articles

--- a/src/about.html
+++ b/src/about.html
@@ -10,7 +10,227 @@
 <div class="page">
   <div class="page__box">
     <!-- Header -->
-    <header class="page__header header"></header>
+    <header class="page__header header">
+      <!-- Header Top-->
+      <div class="header-top">
+        <div class="container">
+          <div class="header-top__wrapper">
+            <ul class="header-top__menu top-menu">
+              <li class="top-menu__item">
+                <a href="about.html" class="top-menu__link">О проекте</a>
+              </li>
+              <li class="top-menu__item">
+                <a href="vacancies.html" class="top-menu__link">Вакансии</a>
+              </li>
+              <li class="top-menu__item">
+                <a href="page-contacts.html" class="top-menu__link">Контакты</a>
+              </li>
+            </ul>
+            <ul class="header-top__drop-down drop-down">
+              <li class="drop-down__item">
+                <div class="drop-down__title">
+                  <svg class="icon">
+                    <use xlink:href="svg-sprite/svg-sprite.svg#weather"></use>
+                  </svg>
+                  <span>17°C,Торонто</span>
+                  <svg class="icon icon__arrow">
+                    <use
+                      xlink:href="svg-sprite/svg-sprite.svg#arrow-bott"
+                    ></use>
+                  </svg>
+                </div>
+                <ul class="drop-down__list">
+                  <li class="drop-down__sub-item">Торонто</li>
+                  <li class="drop-down__sub-item">Москва</li>
+                  <li class="drop-down__sub-item">Лондон</li>
+                  <li class="drop-down__sub-item">Париж</li>
+                  <li class="drop-down__sub-item">Нью-Йорк</li>
+                </ul>
+              </li>
+              <li class="drop-down__item">
+                <div class="drop-down__title">
+                  <svg class="icon">
+                    <use xlink:href="svg-sprite/svg-sprite.svg#language"></use>
+                  </svg>
+                  <span>Русский</span>
+                  <svg class="icon icon__arrow">
+                    <use
+                      xlink:href="svg-sprite/svg-sprite.svg#arrow-bott"
+                    ></use>
+                  </svg>
+                </div>
+                <ul class="drop-down__list">
+                  <li class="drop-down__sub-item">English</li>
+                  <li class="drop-down__sub-item">Español</li>
+                  <li class="drop-down__sub-item">Français</li>
+                  <li class="drop-down__sub-item">Português</li>
+                  <li class="drop-down__sub-item">Polszczyzna</li>
+                  <li class="drop-down__sub-item">Русский</li>
+                  <li class="drop-down__sub-item">Українська</li>
+                </ul>
+              </li>
+              <li class="drop-down__item">
+                <div class="drop-down__title">
+                  <svg class="icon">
+                    <use xlink:href="svg-sprite/svg-sprite.svg#user"></use>
+                  </svg>
+                  <span>Мой аккаунт</span>
+                  <svg class="icon icon__arrow">
+                    <use
+                      xlink:href="svg-sprite/svg-sprite.svg#arrow-bott"
+                    ></use>
+                  </svg>
+                </div>
+                <ul class="drop-down__list">
+                  <li class="drop-down__sub-item">Профиль</li>
+                  <li class="drop-down__sub-item">Курсы</li>
+                  <li class="drop-down__sub-item drop-down__sub-item--coin">
+                    Монеты
+                  </li>
+                  <li class="drop-down__sub-item">Уведомления</li>
+                  <li class="drop-down__sub-item">Настройки</li>
+                  <li class="drop-down__sub-item">Выход</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- / Header Top-->
+      <!-- Header Bottom-->
+      <div class="header-bottom">
+        <div class="container">
+          <div class="header-bottom__wrapper">
+            <button class="header-bottom__burger burger-btn">
+              <div class="burger-btn__wrapper">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </button>
+            <a href="index.html" class="header-bottom__logo">
+              <img src="images/logo.png" alt="logo" />
+            </a>
+            <nav class="header-bottom__nav nav-menu">
+              <ul class="nav-menu__list menu-list">
+                <li class="menu-list__item">
+                  <a href="#" class="menu-list__link">Иммиграция</a>
+                </li>
+                <li class="menu-list__item">
+                  <a href="#" class="menu-list__link">Учеба</a>
+                </li>
+                <li class="menu-list__item">
+                  <a href="#" class="menu-list__link">Работа</a>
+                </li>
+                <li class="menu-list__item">
+                  <a href="#" class="menu-list__link">Визы</a>
+                </li>
+                <li class="menu-list__item">
+                  <a href="page-courses.html" class="menu-list__link"
+                    >Усуги и курсы</a
+                  >
+                </li>
+                <li class="menu-list__item">
+                  <a href="blog.html" class="menu-list__link">Блог</a>
+                </li>
+              </ul>
+              <ul class="nav-menu__drop-down drop-down">
+                <li class="drop-down__item">
+                  <div class="drop-down__title">
+                    <svg class="icon">
+                      <use xlink:href="svg-sprite/svg-sprite.svg#weather"></use>
+                    </svg>
+                    <span>17°C,Торонто</span>
+                    <svg class="icon icon__arrow">
+                      <use
+                        xlink:href="svg-sprite/svg-sprite.svg#arrow-bott"
+                      ></use>
+                    </svg>
+                  </div>
+                  <ul class="drop-down__list">
+                    <li class="drop-down__sub-item">Торонто</li>
+                    <li class="drop-down__sub-item">Москва</li>
+                    <li class="drop-down__sub-item">Лондон</li>
+                    <li class="drop-down__sub-item">Париж</li>
+                    <li class="drop-down__sub-item">Нью-Йорк</li>
+                  </ul>
+                </li>
+                <li class="drop-down__item">
+                  <div class="drop-down__title">
+                    <svg class="icon">
+                      <use
+                        xlink:href="svg-sprite/svg-sprite.svg#language"
+                      ></use>
+                    </svg>
+                    <span>Русский</span>
+                    <svg class="icon icon__arrow">
+                      <use
+                        xlink:href="svg-sprite/svg-sprite.svg#arrow-bott"
+                      ></use>
+                    </svg>
+                  </div>
+                  <ul class="drop-down__list">
+                    <li class="drop-down__sub-item">English</li>
+                    <li class="drop-down__sub-item">Español</li>
+                    <li class="drop-down__sub-item">Français</li>
+                    <li class="drop-down__sub-item">Português</li>
+                    <li class="drop-down__sub-item">Polszczyzna</li>
+                    <li class="drop-down__sub-item">Русский</li>
+                    <li class="drop-down__sub-item">Українська</li>
+                  </ul>
+                </li>
+              </ul>
+              <div class="chance-wrapper">
+                <button class="nav-menu__btn btn btn--mobile">
+                  Оценить шансы
+                </button>
+              </div>
+            </nav>
+            <form class="header-bottom__search search">
+              <div class="search__wrapper">
+                <input
+                  type="text"
+                  name="search"
+                  id="search"
+                  class="search__input"
+                  placeholder="Введите поисковой запрос"
+                />
+                <button class="search__btn" type="button">
+                  <svg class="icon">
+                    <use xlink:href="svg-sprite/svg-sprite.svg#search"></use>
+                  </svg>
+                </button>
+              </div>
+              <button type="button" class="search__close"></button>
+            </form>
+            <button
+              class="header-bottom__user-btn user-btn"
+              type="button"
+            ></button>
+            <button class="header-bottom__chance btn-chance" type="button">
+              Оценить шансы
+            </button>
+            <div class="header-bottom__user-mobile user-mobile">
+              <ul class="user-mobile__list">
+                <li class="user-mobile__item">Профиль</li>
+                <li class="user-mobile__item">Курсы</li>
+                <li class="user-mobile__item">Монеты</li>
+                <li class="user-mobile__item">Уведомления</li>
+                <li class="user-mobile__item">Настройки</li>
+                <li class="user-mobile__item user-mobile__item--bold">Выход</li>
+              </ul>
+            </div>
+            <div class="header-bottom__header-user">
+              <svg class="icon">
+                <use xlink:href="svg-sprite/svg-sprite.svg#user"></use>
+              </svg>
+              <span>Мой аккаунт</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- / Header Bottom-->
+    </header>
     <!-- / Header -->
 
     <!-- Main -->
