--- a/src/page-category-articles.html
+++ b/src/page-category-articles.html
@@ -97,7 +97,6 @@
         </div>
       </div>
       <!-- / Header Top-->
-
       <!-- Header Bottom-->
       <div class="header-bottom">
         <div class="container">
@@ -221,6 +220,12 @@
                 <li class="user-mobile__item user-mobile__item--bold">Выход</li>
               </ul>
             </div>
+            <div class="header-bottom__header-user">
+              <svg class="icon">
+                <use xlink:href="svg-sprite/svg-sprite.svg#user"></use>
+              </svg>
+              <span>Мой аккаунт</span>
+            </div>
           </div>
         </div>
       </div>
@@ -229,9 +234,161 @@
     <!-- / Header -->
 
     <!-- Main -->
-    <main class="page__about-project about-project">
+    <main class="page__category category">
       <!--Section-->
-      <section class="test"></section>
+      <section class="category__article-detail article-detail">
+        <div class="container">
+          <div class="article-detail__wrapper">
+            <div class="article-detail__content articles-content">
+              <h1 class="title articles-content__title">
+                Онтария восполняет нехватку кфалифицированных специалистов
+              </h1>
+              <div class="interactive">
+                <time class="interactive__date">30.09.2021</time>
+                <div class="interactive__book-mark book-mark">
+                  <input
+                    type="checkbox"
+                    name="book-mark"
+                    id="book-mark"
+                    class="book-mark__check"
+                  />
+                  <label for="book-mark" class="book-mark__label"
+                    >В закладки</label
+                  >
+                  <svg class="icon">
+                    <use xlink:href="svg-sprite/svg-sprite.svg#mark"></use>
+                  </svg>
+                </div>
+                <ul class="interactive__stars stars">
+                  <li class="stars__item">
+                    <svg class="icon">
+                      <use xlink:href="svg-sprite/svg-sprite.svg#Star"></use>
+                    </svg>
+                  </li>
+                  <li class="stars__item">
+                    <svg class="icon">
+                      <use xlink:href="svg-sprite/svg-sprite.svg#Star"></use>
+                    </svg>
+                  </li>
+                  <li class="stars__item">
+                    <svg class="icon">
+                      <use xlink:href="svg-sprite/svg-sprite.svg#Star"></use>
+                    </svg>
+                  </li>
+                  <li class="stars__item">
+                    <svg class="icon">
+                      <use
+                        xlink:href="svg-sprite/svg-sprite.svg#Star-half"
+                      ></use>
+                    </svg>
+                  </li>
+                  <li class="stars__item">
+                    <svg class="icon">
+                      <use
+                        xlink:href="svg-sprite/svg-sprite.svg#Star-unselected"
+                      ></use>
+                    </svg>
+                  </li>
+                </ul>
+                <span class="interactive__count">(2)</span>
+              </div>
+              <picture class="articles-content__preview">
+                <img src="images/articles-detail.jpg" alt="no-photo" />
+              </picture>
+              <span class="articles-content__subtitle"
+                >С 30 сентября у специалистов появится больше возможностей
+                переобучиться. Желающим обещают оплатить не только
+                образование.</span
+              >
+              <p>
+                30 сентября стартует второй тур финансирования Фонда развития
+                профессиональных навыков был создан для поддержки инициатив в
+                области обучения и развития квалифицированных навыков. Он
+                финансирует проекты, направленные на повышение квалификации и
+                приобретение жителями Онтарио навыков, необходимых для
+                устройства на работу или продвижения по карьерной лестнице.
+                Инициаторами этих проектов могут стать профсоюзы, службы
+                занятости, больницы и другие организации.
+              </p>
+              <p>
+                В первом туре финансирования участвовало 150 проектов. Обучение
+                прошли 260 000 жителей Онтарио. Однако, как заявил министр
+                труда, обучения и развития навыков Монте Макнотон, работодатели
+                по-прежнему испытывают нехватку талантливых сотрудников.
+              </p>
+              <p>
+                Напомним, что 22 сентября правительство провинции направило 72
+                приглашения кандидатам на иммиграцию. Розыгрыш проходил для
+                специалистов с востребованной профессией. Подробнее узнать о
+                том, в каких рабочих нуждаются в Онтарио можно здесь.
+              </p>
+              <p>
+                Во втором туре в Фонд собираются инвестировать $200 млн CAD на
+                поддержку проектов обучения.
+              </p>
+              <p>
+                Такое финансирование позволит более широко поддержать
+                обучающихся. Теперь организации, участвующие во втором раунде
+                Фонда, могут компенсировать стажерам и работникам не только
+                обучение, но и расходы на проезд и уход за детьми. Работодатели,
+                которые приняли на стажировку ученика с ограниченными
+                возможностями из Фонда, могут получить до $5 000 СAD. Особое
+                предпочтение будут отдавать проектам, которые поддерживают
+                выпускников школ с ограниченными возможностями.
+              </p>
+              <p>
+                Предполагается, что подобные меры позволят стать сотрудникам
+                более устойчивыми к изменениям экономики в связи с пандемией.
+              </p>
+              <div class="articles-content__root root">
+                <span class="root__title">Источник</span>
+                <ul class="root__list">
+                  <li class="root__item">
+                    <a href="#" class="root__link">#иммиграция в Канаду</a>
+                  </li>
+                  <li class="root__item">
+                    <a href="#" class="root__link">#иммиграция в Онтарио </a>
+                  </li>
+                  <li class="root__item">
+                    <a href="#" class="root__link">#работа в Канаде </a>
+                  </li>
+                  <li class="root__item">
+                    <a href="#" class="root__link">#работа в Онтарио </a>
+                  </li>
+                  <li class="root__item">
+                    <a href="#" class="root__link">#эмиграция в Онтарио </a>
+                  </li>
+                  <li class="root__item">
+                    <a href="#" class="root__link">#жизнь в Канаде</a>
+                  </li>
+                  <li class="root__item">
+                    <a href="#" class="root__link">#учеба в Канаде </a>
+                  </li>
+                  <li class="root__item">
+                    <a href="#" class="root__link">#карьера в Канаде </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="articles-content__news last-news">
+                <h3 class="last-news__title">Последние новости</h3>
+                <ul class="last-news__list">
+                  <li class="last-news__item">
+                    Переезд в Канаду в качестве няни
+                  </li>
+                  <li class="last-news__item">Работа экскурсоводом в Канаде</li>
+                  <li class="last-news__item">
+                    Рейтинг провинций и территорий Канады: куда лучше
+                    иммигрировать
+                  </li>
+                  <li class="last-news__item">Двойное гражданство в Канаде</li>
+                  <li class="last-news__item">Банковская система Канады</li>
+                </ul>
+              </div>
+            </div>
+            <article class="article-detail__section section-articles"></article>
+          </div>
+        </div>
+      </section>
       <!--/ Section-->
 
       <!--Popup--><!--/ Popup-->
